@@ -16,12 +16,15 @@
 import java.io.*;                        // Entrada y salida de datos (InputStream, OutputStream, IOException)
 import java.net.HttpURLConnection;       // Clase para conexiones HTTP cliente-servidor
 import java.net.URL;                     // Representa una dirección web (ej: http://localhost:8080)
+import java.net.URI;                     // Representa un URI inmutable y seguro
 import java.nio.charset.StandardCharsets; // Define codificación UTF-8 para texto
 import java.security.KeyFactory;         // Permite reconstruir claves RSA desde sus bytes
 import java.security.PublicKey;          // Representa una clave pública RSA
 import java.security.spec.X509EncodedKeySpec; // Define el formato X.509 estándar para claves públicas
 import java.util.Base64;                 // Codificación y decodificación Base64
 import java.util.Optional;               // Maneja valores opcionales sin usar null
+import java.util.Map;                    // Representaciones JSON clave-valor
+import java.util.List;                   // Arrays JSON de objetos
 import javax.net.ssl.HttpsURLConnection; // Conexiones HTTPS
 import javax.net.ssl.SSLContext;         // Contexto TLS para confiar en dev
 import javax.net.ssl.TrustManager;       // Gestor de confianza
@@ -34,6 +37,7 @@ public final class ServerStore {
     // Dirección base del servidor HTTP
     private static final String BASE = "https://localhost:8443";
     private static final boolean DEV_TRUST_ALL = true; // Solo para entorno de desarrollo
+    private static final int LARGE_JSON_STRING = 4_194_304; // 4 MiB for Base64 payloads
 
     static {
         // Activa confianza amplia para el certificado de desarrollo (self-signed)
@@ -55,6 +59,26 @@ public final class ServerStore {
         }
     }
 
+    public static final class AuthResult {
+        public final boolean ok;
+        public final boolean totpRequired;
+        public final String token;
+        public final String role;
+        public final String ticket;
+        public final boolean totpEnabled;
+        public AuthResult(boolean ok, boolean totpRequired, String token, String role, String ticket, boolean totpEnabled) {
+            this.ok = ok; this.totpRequired = totpRequired; this.token = token; this.role = role; this.ticket = ticket; this.totpEnabled = totpEnabled;
+        }
+    }
+
+    public static final class TotpEnrollResponse {
+        public final String secret;
+        public final String otpauthUri;
+        public TotpEnrollResponse(String secret, String otpauthUri) {
+            this.secret = secret; this.otpauthUri = otpauthUri;
+        }
+    }
+
     /** Estructura para ficheros cifrados descargados. */
     public static final class EncryptedFile {
         public final String id;
@@ -73,7 +97,7 @@ public final class ServerStore {
      */
     /** Comprueba si existe un usuario mediante GET /exists/{username}. */
     public static boolean exists(String username) throws IOException {
-        HttpURLConnection c = (HttpURLConnection) new URL(BASE + "/exists/" + username).openConnection();
+        HttpURLConnection c = (HttpURLConnection) URI.create(BASE + "/exists/" + username).toURL().openConnection();
         c.setRequestMethod("GET");
         int code = c.getResponseCode();
         c.disconnect();
@@ -88,7 +112,7 @@ public final class ServerStore {
     public static Optional<UserRecord> load(String username) {
         try {
             // Crear la conexión HTTP
-            HttpURLConnection c = (HttpURLConnection) new URL(BASE + "/user/" + username).openConnection();
+            HttpURLConnection c = (HttpURLConnection) URI.create(BASE + "/user/" + username).toURL().openConnection();
             c.setRequestMethod("GET");
             
             // Si no existe el usuario, devolver vacío
@@ -101,12 +125,12 @@ public final class ServerStore {
             String json = new String(c.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
             c.disconnect();
 
-            // Extraer campos del JSON manualmente (sin librerías externas)
-            String u   = jsonGet(json, "username");
-            byte[] salt= b64d(jsonGet(json, "saltB64"));
-            byte[] pub = b64d(jsonGet(json, "publicKeyB64"));
-            byte[] enc = b64d(jsonGet(json, "encPrivateB64"));
-            byte[] iv  = b64d(jsonGet(json, "ivB64"));
+            Map<String, String> data = JsonUtil.parseObject(json, 16, 4096);
+            String u   = require(data, "username");
+            byte[] salt= b64d(require(data, "saltB64"));
+            byte[] pub = b64d(require(data, "publicKeyB64"));
+            byte[] enc = b64d(require(data, "encPrivateB64"));
+            byte[] iv  = b64d(require(data, "ivB64"));
             
             // Reconstruir la clave pública RSA desde formato X.509
             PublicKey pk = KeyFactory.getInstance("RSA").generatePublic(new X509EncodedKeySpec(pub));
@@ -123,38 +147,80 @@ public final class ServerStore {
     // --- Auth (challenge) ---
     /** Inicia autenticación: devuelve nonce y materiales para abrir la privada. */
     public static String authStart(String username) throws IOException {
-        String json = "{\"username\":\""+esc(username)+"\"}";
+        String json = "{"+"\"username\":"+JsonUtil.quote(username)+"}";
         byte[] body = json.getBytes(StandardCharsets.UTF_8);
-        HttpURLConnection c = (HttpURLConnection) new URL(BASE + "/auth/start").openConnection();
+        HttpURLConnection c = (HttpURLConnection) URI.create(BASE + "/auth/start").toURL().openConnection();
         c.setRequestMethod("POST");
         c.setDoOutput(true);
         c.setRequestProperty("Content-Type","application/json; charset=utf-8");
         try (OutputStream os = c.getOutputStream()) { os.write(body); }
-        if (c.getResponseCode() != 200) { throw new IOException("server returned " + c.getResponseCode()); }
-        String resp = new String(c.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
+        int code = c.getResponseCode();
+        InputStream stream = code >= 200 && code < 300 ? c.getInputStream() : c.getErrorStream();
+        String resp = stream != null ? new String(stream.readAllBytes(), StandardCharsets.UTF_8) : "";
         c.disconnect();
+        if (code != 200) { throw new IOException(buildErrorMessage(code, resp)); }
         return resp; // JSON crudo con nonceB64, saltB64, publicKeyB64, encPrivateB64, ivB64
     }
 
     /** Finaliza autenticación: envía firma, recibe token y rol. */
-    public static String[] authFinish(String username, String nonceB64, String signatureB64) throws IOException {
+    public static AuthResult authFinish(String username, String nonceB64, String signatureB64) throws IOException {
         String json = "{"+
-                "\"username\":\""+esc(username)+"\","+
-                "\"nonceB64\":\""+nonceB64+"\","+
-                "\"signatureB64\":\""+signatureB64+"\""+
-                "}";
+                "\"username\":"+JsonUtil.quote(username)+","+
+                "\"nonceB64\":"+JsonUtil.quote(nonceB64)+","+
+                "\"signatureB64\":"+JsonUtil.quote(signatureB64)
+                +"}";
         byte[] body = json.getBytes(StandardCharsets.UTF_8);
-        HttpURLConnection c = (HttpURLConnection) new URL(BASE + "/auth/finish").openConnection();
+        HttpURLConnection c = (HttpURLConnection) URI.create(BASE + "/auth/finish").toURL().openConnection();
         c.setRequestMethod("POST");
         c.setDoOutput(true);
         c.setRequestProperty("Content-Type","application/json; charset=utf-8");
         try (OutputStream os = c.getOutputStream()) { os.write(body); }
-        if (c.getResponseCode() != 200) { throw new IOException("server returned " + c.getResponseCode()); }
-        String resp = new String(c.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
+        int code = c.getResponseCode();
+        InputStream stream = code >= 200 && code < 300 ? c.getInputStream() : c.getErrorStream();
+        String resp = stream != null ? new String(stream.readAllBytes(), StandardCharsets.UTF_8) : "";
         c.disconnect();
-        String token = jsonGet(resp, "token");
-        String role = jsonGet(resp, "role");
-        return new String[]{token, role};
+        if (code != 200) { throw new IOException(buildErrorMessage(code, resp)); }
+        Map<String, String> data = JsonUtil.parseObject(resp, 12, 1024);
+        boolean ok = Boolean.parseBoolean(data.getOrDefault("ok", "false"));
+        boolean totpRequired = Boolean.parseBoolean(data.getOrDefault("totpRequired", "false"));
+        if (totpRequired) {
+            String ticket = require(data, "ticket");
+            String role = require(data, "role");
+            return new AuthResult(false, true, null, role, ticket, true);
+        }
+        if (!ok) {
+            throw new IOException("authentication failed");
+        }
+        String token = require(data, "token");
+        String role = require(data, "role");
+        boolean totpEnabled = Boolean.parseBoolean(data.getOrDefault("totpEnabled", "false"));
+        return new AuthResult(true, false, token, role, null, totpEnabled);
+    }
+
+    /** Completa el login introduciendo el código TOTP. */
+    public static AuthResult authTotp(String ticket, String code) throws IOException {
+        String json = "{"+
+                "\"ticket\":"+JsonUtil.quote(ticket)+","+
+                "\"code\":"+JsonUtil.quote(code)
+                +"}";
+        byte[] body = json.getBytes(StandardCharsets.UTF_8);
+        HttpURLConnection c = (HttpURLConnection) URI.create(BASE + "/auth/totp").toURL().openConnection();
+        c.setRequestMethod("POST");
+        c.setDoOutput(true);
+        c.setRequestProperty("Content-Type","application/json; charset=utf-8");
+        try (OutputStream os = c.getOutputStream()) { os.write(body); }
+        int codeResp = c.getResponseCode();
+        InputStream stream = codeResp >= 200 && codeResp < 300 ? c.getInputStream() : c.getErrorStream();
+        String resp = stream != null ? new String(stream.readAllBytes(), StandardCharsets.UTF_8) : "";
+        c.disconnect();
+        if (codeResp != 200) { throw new IOException(buildErrorMessage(codeResp, resp)); }
+        Map<String, String> data = JsonUtil.parseObject(resp, 8, 1024);
+        boolean ok = Boolean.parseBoolean(data.getOrDefault("ok", "false"));
+        if (!ok) { throw new IOException("authentication failed"); }
+        String token = require(data, "token");
+        String role = require(data, "role");
+        boolean totpEnabled = Boolean.parseBoolean(data.getOrDefault("totpEnabled", "true"));
+        return new AuthResult(true, false, token, role, null, totpEnabled);
     }
 
     /**
@@ -166,17 +232,17 @@ public final class ServerStore {
 
         // Construir JSON con los campos del usuario
         String json = "{"+
-                "\"username\":\""+esc(ur.username)+"\","+
-                "\"saltB64\":\""+b64(ur.salt)+"\","+
-                "\"publicKeyB64\":\""+b64(ur.publicKey.getEncoded())+"\","+
-                "\"encPrivateB64\":\""+b64(ur.encPriv)+"\","+
-                "\"ivB64\":\""+b64(ur.iv)+"\""+
-                "}";
+                "\"username\":"+JsonUtil.quote(ur.username)+","+
+                "\"saltB64\":"+JsonUtil.quote(b64(ur.salt))+","+
+                "\"publicKeyB64\":"+JsonUtil.quote(b64(ur.publicKey.getEncoded()))+","+
+                "\"encPrivateB64\":"+JsonUtil.quote(b64(ur.encPriv))+","+
+                "\"ivB64\":"+JsonUtil.quote(b64(ur.iv))
+                +"}";
 
         byte[] body = json.getBytes(StandardCharsets.UTF_8);
 
         // Crear la conexión HTTP tipo POST
-        HttpURLConnection c = (HttpURLConnection) new URL(BASE + "/register").openConnection();
+        HttpURLConnection c = (HttpURLConnection) URI.create(BASE + "/register").toURL().openConnection();
         c.setRequestMethod("POST");
         c.setDoOutput(true);
         c.setRequestProperty("Content-Type","application/json; charset=utf-8");
@@ -196,13 +262,13 @@ public final class ServerStore {
     /** Sube el JSON de un fichero cifrado para un usuario. */
     public static void uploadFile(String username, String filename, byte[] iv, byte[] cekWrapped, byte[] ciphertext, String bearerToken) throws IOException {
         String json = "{"+
-                "\"filename\":\""+esc(filename)+"\","+
-                "\"ivB64\":\""+b64(iv)+"\","+
-                "\"cekWrappedB64\":\""+b64(cekWrapped)+"\","+
-                "\"ctB64\":\""+b64(ciphertext)+"\""+
-                "}";
+                "\"filename\":"+JsonUtil.quote(filename)+","+
+                "\"ivB64\":"+JsonUtil.quote(b64(iv))+","+
+                "\"cekWrappedB64\":"+JsonUtil.quote(b64(cekWrapped))+","+
+                "\"ctB64\":"+JsonUtil.quote(b64(ciphertext))
+                +"}";
         byte[] body = json.getBytes(StandardCharsets.UTF_8);
-        HttpURLConnection c = (HttpURLConnection) new URL(BASE + "/upload/" + username).openConnection();
+        HttpURLConnection c = (HttpURLConnection) URI.create(BASE + "/upload/" + username).toURL().openConnection();
         c.setRequestMethod("POST");
         c.setDoOutput(true);
         c.setRequestProperty("Content-Type","application/json; charset=utf-8");
@@ -215,116 +281,99 @@ public final class ServerStore {
 
     /** Lista los ficheros del usuario y devuelve [id, filename]. */
     public static String[][] listFiles(String username, String bearerToken) throws IOException {
-        HttpURLConnection c = (HttpURLConnection) new URL(BASE + "/files/" + username).openConnection();
+        HttpURLConnection c = (HttpURLConnection) URI.create(BASE + "/files/" + username).toURL().openConnection();
         c.setRequestMethod("GET");
         if (bearerToken != null) c.setRequestProperty("Authorization", "Bearer " + bearerToken);
         if (c.getResponseCode() != 200) { c.disconnect(); throw new IOException("server returned " + c.getResponseCode()); }
         String json = new String(c.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
         c.disconnect();
-        // Minimal JSON parsing: expecting array of {id, filename}
-        // Parse naively to avoid deps
-        java.util.List<String[]> out = new java.util.ArrayList<>();
-        int i = 0;
-        while (true) {
-            int idIdx = json.indexOf("\"id\":\"", i); if (idIdx<0) break;
-            int idStart = idIdx+6; int idEnd = json.indexOf('"', idStart);
-            String id = json.substring(idStart, idEnd);
-            int fnIdx = json.indexOf("\"filename\":\"", idEnd); if (fnIdx<0) break;
-            int fnStart = fnIdx+12; int fnEnd = json.indexOf('"', fnStart);
-            String filename = json.substring(fnStart, fnEnd);
-            out.add(new String[]{id, filename});
-            i = fnEnd+1;
+        List<Map<String, String>> items = JsonUtil.parseArrayOfObjects(json, 1024, 8, 1024);
+        String[][] result = new String[items.size()][2];
+        for (int i = 0; i < items.size(); i++) {
+            Map<String, String> item = items.get(i);
+            result[i][0] = require(item, "id");
+            result[i][1] = require(item, "filename");
         }
-        return out.toArray(new String[0][0]);
+        return result;
     }
 
     /** Lista ficheros compartidos conmigo: devuelve [owner, id, filename]. */
     public static String[][] listShared(String username, String bearerToken) throws IOException {
-        HttpURLConnection c = (HttpURLConnection) new URL(BASE + "/files/shared/" + username).openConnection();
+        HttpURLConnection c = (HttpURLConnection) URI.create(BASE + "/files/shared/" + username).toURL().openConnection();
         c.setRequestMethod("GET");
         if (bearerToken != null) c.setRequestProperty("Authorization", "Bearer " + bearerToken);
         if (c.getResponseCode() != 200) { c.disconnect(); throw new IOException("server returned " + c.getResponseCode()); }
         String json = new String(c.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
         c.disconnect();
-        java.util.List<String[]> out = new java.util.ArrayList<>();
-        int i = 0;
-        while (true) {
-            int oIdx = json.indexOf("\"owner\":\"", i); if (oIdx<0) break;
-            int oStart = oIdx+9; int oEnd = json.indexOf('"', oStart);
-            String owner = json.substring(oStart, oEnd);
-            int idIdx = json.indexOf("\"id\":\"", oEnd); if (idIdx<0) break;
-            int idStart = idIdx+6; int idEnd = json.indexOf('"', idStart);
-            String id = json.substring(idStart, idEnd);
-            int fnIdx = json.indexOf("\"filename\":\"", idEnd); if (fnIdx<0) break;
-            int fnStart = fnIdx+12; int fnEnd = json.indexOf('"', fnStart);
-            String filename = json.substring(fnStart, fnEnd);
-            out.add(new String[]{owner, id, filename});
-            i = fnEnd+1;
+        List<Map<String, String>> items = JsonUtil.parseArrayOfObjects(json, 1024, 8, 1024);
+        String[][] result = new String[items.size()][3];
+        for (int i = 0; i < items.size(); i++) {
+            Map<String, String> item = items.get(i);
+            result[i][0] = require(item, "owner");
+            result[i][1] = require(item, "id");
+            result[i][2] = require(item, "filename");
         }
-        return out.toArray(new String[0][0]);
+        return result;
     }
 
     /** Descarga un fichero cifrado: GET /file/{user}/{id}. */
     public static EncryptedFile downloadFile(String username, String id, String bearerToken) throws IOException {
-        HttpURLConnection c = (HttpURLConnection) new URL(BASE + "/file/" + username + "/" + id).openConnection();
+        HttpURLConnection c = (HttpURLConnection) URI.create(BASE + "/file/" + username + "/" + id).toURL().openConnection();
         c.setRequestMethod("GET");
         if (bearerToken != null) c.setRequestProperty("Authorization", "Bearer " + bearerToken);
         if (c.getResponseCode() != 200) { c.disconnect(); throw new IOException("server returned " + c.getResponseCode()); }
         String json = new String(c.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
         c.disconnect();
-        String fid = jsonGet(json, "id");
-        String fname = jsonGet(json, "filename");
-        byte[] iv = b64d(jsonGet(json, "ivB64"));
-        byte[] cekW = b64d(jsonGet(json, "cekWrappedB64"));
-        byte[] ct = b64d(jsonGet(json, "ctB64"));
+        Map<String, String> data = JsonUtil.parseObject(json, 16, LARGE_JSON_STRING);
+        String fid = require(data, "id");
+        String fname = require(data, "filename");
+        byte[] iv = b64d(require(data, "ivB64"));
+        byte[] cekW = b64d(require(data, "cekWrappedB64"));
+        byte[] ct = b64d(require(data, "ctB64"));
         return new EncryptedFile(fid, fname, iv, cekW, ct);
     }
 
     /** Descarga un fichero cifrado especificando destinatario compartido. */
     public static EncryptedFile downloadFileAs(String owner, String id, String recipient, String bearerToken) throws IOException {
-        HttpURLConnection c = (HttpURLConnection) new URL(BASE + "/file/" + owner + "/" + id + "/" + recipient).openConnection();
+        HttpURLConnection c = (HttpURLConnection) URI.create(BASE + "/file/" + owner + "/" + id + "/" + recipient).toURL().openConnection();
         c.setRequestMethod("GET");
         if (bearerToken != null) c.setRequestProperty("Authorization", "Bearer " + bearerToken);
         if (c.getResponseCode() != 200) { c.disconnect(); throw new IOException("server returned " + c.getResponseCode()); }
         String json = new String(c.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
         c.disconnect();
-        String fid = jsonGet(json, "id");
-        String fname = jsonGet(json, "filename");
-        byte[] iv = b64d(jsonGet(json, "ivB64"));
-        byte[] cekW = b64d(jsonGet(json, "cekWrappedB64"));
-        byte[] ct = b64d(jsonGet(json, "ctB64"));
+        Map<String, String> data = JsonUtil.parseObject(json, 16, LARGE_JSON_STRING);
+        String fid = require(data, "id");
+        String fname = require(data, "filename");
+        byte[] iv = b64d(require(data, "ivB64"));
+        byte[] cekW = b64d(require(data, "cekWrappedB64"));
+        byte[] ct = b64d(require(data, "ctB64"));
         return new EncryptedFile(fid, fname, iv, cekW, ct);
     }
 
     // --- Admin API ---
     /** Lista todos los usuarios (ADMIN). */
     public static String[][] listAllUsers(String bearerToken) throws IOException {
-        HttpURLConnection c = (HttpURLConnection) new URL(BASE + "/admin/users").openConnection();
+        HttpURLConnection c = (HttpURLConnection) URI.create(BASE + "/admin/users").toURL().openConnection();
         c.setRequestMethod("GET");
         if (bearerToken != null) c.setRequestProperty("Authorization", "Bearer " + bearerToken);
         if (c.getResponseCode() != 200) { c.disconnect(); throw new IOException("server returned " + c.getResponseCode()); }
         String json = new String(c.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
         c.disconnect();
-        java.util.List<String[]> out = new java.util.ArrayList<>();
-        int i = 0;
-        while (true) {
-            int uIdx = json.indexOf("\"username\":\"", i); if (uIdx<0) break;
-            int uStart = uIdx+12; int uEnd = json.indexOf('"', uStart);
-            String username = json.substring(uStart, uEnd);
-            int rIdx = json.indexOf("\"role\":\"", uEnd); if (rIdx<0) break;
-            int rStart = rIdx+8; int rEnd = json.indexOf('"', rStart);
-            String role = json.substring(rStart, rEnd);
-            out.add(new String[]{username, role});
-            i = rEnd+1;
+        List<Map<String, String>> items = JsonUtil.parseArrayOfObjects(json, 1024, 4, 512);
+        String[][] result = new String[items.size()][2];
+        for (int i = 0; i < items.size(); i++) {
+            Map<String, String> item = items.get(i);
+            result[i][0] = require(item, "username");
+            result[i][1] = require(item, "role");
         }
-        return out.toArray(new String[0][0]);
+        return result;
     }
 
     /** Cambia el rol de un usuario (ADMIN). */
     public static void setUserRole(String username, String role, String bearerToken) throws IOException {
-        String json = "{"+"\"username\":\""+esc(username)+"\",\"role\":\""+esc(role)+"\"}";
+        String json = "{"+"\"username\":"+JsonUtil.quote(username)+",\"role\":"+JsonUtil.quote(role)+"}";
         byte[] body = json.getBytes(StandardCharsets.UTF_8);
-        HttpURLConnection c = (HttpURLConnection) new URL(BASE + "/admin/setRole").openConnection();
+        HttpURLConnection c = (HttpURLConnection) URI.create(BASE + "/admin/setRole").toURL().openConnection();
         c.setRequestMethod("POST");
         c.setDoOutput(true);
         c.setRequestProperty("Content-Type","application/json; charset=utf-8");
@@ -337,11 +386,11 @@ public final class ServerStore {
     /** Comparte un fichero con un usuario, enviando su CEK envuelta. */
     public static void shareFile(String owner, String id, String targetUser, byte[] cekWrapped, String bearerToken) throws IOException {
         String json = "{"+
-                "\"user\":\""+esc(targetUser)+"\","+
-                "\"cekWrappedB64\":\""+b64(cekWrapped)+"\""+
-                "}";
+                "\"user\":"+JsonUtil.quote(targetUser)+","+
+                "\"cekWrappedB64\":"+JsonUtil.quote(b64(cekWrapped))
+                +"}";
         byte[] body = json.getBytes(StandardCharsets.UTF_8);
-        HttpURLConnection c = (HttpURLConnection) new URL(BASE + "/share/" + owner + "/" + id).openConnection();
+        HttpURLConnection c = (HttpURLConnection) URI.create(BASE + "/share/" + owner + "/" + id).toURL().openConnection();
         c.setRequestMethod("POST");
         c.setDoOutput(true);
         c.setRequestProperty("Content-Type","application/json; charset=utf-8");
@@ -351,7 +400,91 @@ public final class ServerStore {
         c.disconnect();
     }
 
+    /** Lista los destinatarios actuales de un fichero compartido. */
+    public static String[] listShareRecipients(String owner, String id, String bearerToken) throws IOException {
+        HttpURLConnection c = (HttpURLConnection) URI.create(BASE + "/share/list/" + owner + "/" + id).toURL().openConnection();
+        c.setRequestMethod("GET");
+        if (bearerToken != null) c.setRequestProperty("Authorization", "Bearer " + bearerToken);
+        int code = c.getResponseCode();
+        InputStream stream = code >= 200 && code < 300 ? c.getInputStream() : c.getErrorStream();
+        String json = stream != null ? new String(stream.readAllBytes(), StandardCharsets.UTF_8) : "";
+        c.disconnect();
+        if (code != 200) { throw new IOException(buildErrorMessage(code, json)); }
+        List<String> list = JsonUtil.parseArrayOfStrings(json, 1024, 256);
+        return list.toArray(new String[0]);
+    }
+
+    /** Revoca el acceso previamente compartido a un usuario. */
+    public static void revokeShare(String owner, String id, String targetUser, String bearerToken) throws IOException {
+        HttpURLConnection c = (HttpURLConnection) URI.create(BASE + "/share/revoke/" + owner + "/" + id + "/" + targetUser).toURL().openConnection();
+        c.setRequestMethod("DELETE");
+        if (bearerToken != null) c.setRequestProperty("Authorization", "Bearer " + bearerToken);
+        int code = c.getResponseCode();
+        InputStream stream = code >= 200 && code < 300 ? c.getInputStream() : c.getErrorStream();
+        String body = stream != null ? new String(stream.readAllBytes(), StandardCharsets.UTF_8) : "";
+        c.disconnect();
+        if (code != 200) { throw new IOException(buildErrorMessage(code, body)); }
+    }
+
+    public static TotpEnrollResponse totpEnroll(String bearerToken) throws IOException {
+        HttpURLConnection c = (HttpURLConnection) URI.create(BASE + "/totp/enroll").toURL().openConnection();
+        c.setRequestMethod("POST");
+        c.setDoOutput(true);
+        c.setRequestProperty("Content-Type","application/json; charset=utf-8");
+        if (bearerToken != null) c.setRequestProperty("Authorization", "Bearer " + bearerToken);
+        try (OutputStream os = c.getOutputStream()) { os.write("{}".getBytes(StandardCharsets.UTF_8)); }
+        int code = c.getResponseCode();
+        InputStream stream = code >= 200 && code < 300 ? c.getInputStream() : c.getErrorStream();
+        String resp = stream != null ? new String(stream.readAllBytes(), StandardCharsets.UTF_8) : "";
+        c.disconnect();
+        if (code != 200) { throw new IOException(buildErrorMessage(code, resp)); }
+        Map<String, String> data = JsonUtil.parseObject(resp, 4, 256);
+        return new TotpEnrollResponse(require(data, "secret"), require(data, "otpauthUri"));
+    }
+
+    public static void totpConfirm(String code, String bearerToken) throws IOException {
+        String json = "{"+"\"code\":"+JsonUtil.quote(code)+"}";
+        byte[] body = json.getBytes(StandardCharsets.UTF_8);
+        HttpURLConnection c = (HttpURLConnection) URI.create(BASE + "/totp/confirm").toURL().openConnection();
+        c.setRequestMethod("POST");
+        c.setDoOutput(true);
+        c.setRequestProperty("Content-Type","application/json; charset=utf-8");
+        if (bearerToken != null) c.setRequestProperty("Authorization", "Bearer " + bearerToken);
+        try (OutputStream os = c.getOutputStream()) { os.write(body); }
+        int codeResp = c.getResponseCode();
+        InputStream stream = codeResp >= 200 && codeResp < 300 ? c.getInputStream() : c.getErrorStream();
+        String resp = stream != null ? new String(stream.readAllBytes(), StandardCharsets.UTF_8) : "";
+        c.disconnect();
+        if (codeResp != 200) { throw new IOException(buildErrorMessage(codeResp, resp)); }
+    }
+
+    public static void totpDisable(String bearerToken) throws IOException {
+        HttpURLConnection c = (HttpURLConnection) URI.create(BASE + "/totp/disable").toURL().openConnection();
+        c.setRequestMethod("POST");
+        c.setDoOutput(true);
+        c.setRequestProperty("Content-Type","application/json; charset=utf-8");
+        if (bearerToken != null) c.setRequestProperty("Authorization", "Bearer " + bearerToken);
+        try (OutputStream os = c.getOutputStream()) { os.write("{}".getBytes(StandardCharsets.UTF_8)); }
+        int code = c.getResponseCode();
+        InputStream stream = code >= 200 && code < 300 ? c.getInputStream() : c.getErrorStream();
+        String resp = stream != null ? new String(stream.readAllBytes(), StandardCharsets.UTF_8) : "";
+        c.disconnect();
+        if (code != 200) { throw new IOException(buildErrorMessage(code, resp)); }
+    }
+
     // --- Métodos auxiliares de codificación/decodificación ---
+
+    private static String require(Map<String, String> map, String key) {
+        String value = map.get(key);
+        if (value == null) {
+            throw new IllegalArgumentException("missing field: " + key);
+        }
+        String trimmed = value.trim();
+        if (trimmed.isEmpty()) {
+            throw new IllegalArgumentException("empty field: " + key);
+        }
+        return trimmed;
+    }
 
     /** Codifica bytes en texto Base64 */
     private static String b64(byte[] x) {
@@ -363,23 +496,17 @@ public final class ServerStore {
         return Base64.getDecoder().decode(s);
     }
 
-    /** Escapa comillas para insertar texto dentro de JSON */
-    private static String esc(String s) {
-        return s == null ? "" : s.replace("\"", "\\\"");
-    }
-
-    /**
-     * Extrae un valor de un JSON plano en formato:
-     * {"clave":"valor"}
-     */
-    private static String jsonGet(String json, String key) {
-        String pat = "\"" + key + "\":\"";
-        int i = json.indexOf(pat);
-        if (i<0) return null;
-        int start = i + pat.length();
-        int end = json.indexOf('"', start);
-        if (end<0) return null;
-        return json.substring(start, end);
+    private static String buildErrorMessage(int code, String body) {
+        if (code == 401) {
+            return "Sesión expirada o token inválido";
+        }
+        if (code == 423) {
+            return body == null || body.isBlank() ? "Cuenta bloqueada temporalmente" : body.trim();
+        }
+        if (body == null || body.isBlank()) {
+            return "server returned " + code;
+        }
+        return "server returned " + code + " - " + body.trim();
     }
 
     /** Configura HTTPS para confiar en cualquier certificado (solo DEV). */
